--- a/web/requirements.txt
+++ b/web/requirements.txt
@@ -27,7 +27,7 @@ tzdata==2025.2
 uritemplate==4.2.0
 whitenoise==6.9.0
 dj-database-url==2.2.0
-psycopg2-binary==2.9.9
+psycopg==3.2.3
 Pillow==10.4.0
 django-cloudinary-storage==0.3.0
 cloudinary==1.41.0
